Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org

0.15

* key release fixed in drflux
* better random functions with randomness.ss
* frisbee: a functional reactive game engine using frtime
* added -lang (not how useful this is now)
* fixed crashes to do with garbage collection using threads

0.14

* added vertex colouring to wireframe lines
* fixed torus texture coordinates
* added build option for ACCUM_BUFFER, off by default - bad tempered drivers
* bounds checked the primitive functions
* repl crashfix
* removed force-load-texture and added clear-texture-cache
* (wire-opacity) courtesy of Gabor Papp
* new get-searchpaths and set-searchpaths
* added optional load parameters to (load-texture) for mipmapping or cubemapping
* added (texture-params) for better texture support
* added vreflect
* fixed a bug where poly topology was being regenerated every time (pdata-copy) 
  was called
* put the user callback inside a push/pop state
* added (with-state) (with-primitive) (pdata-map!) (pdata-fold)
* added (pdata-index-map!) (pdata-index-fold)
* collada scene import
* drflux now fully operational - but a little crash prone with some commands
* text improvements courtesy of Gabor Papp
* obj-export for saving out model data
* obj-import fixes
* saves currentscript.scm~ as backup on F5
* osc argument range checking crash fix
* improved parentheses highlighting
* flashing cursor
* fixed the editor text for newer versions of libfreetype (now using 2.3.5)
* added docs/fluxus-documentation.txt

0.13

* stereo rendering support by Alex Norman, adding:
	- (set-stereo-mode ['no-stereo 'crystal-eyes 'colour])
	- (get-stereo-mode)
	- (get-eye-separation) 
	- (set-eye-separation)
* (draw-buffer) added by Alex Norman
* libfluxus clean up, removed old cruft, simplified renderer
* removed (begin-scene) and (end-scene), added (render)
* removed feedback for aesthetic reasons
* added (clear-zbuffer)
* added (pixels-load) for loading pngs into pixel prims