@@ -1,0 +1,209 @@
+# Blender3D v243 OBJ File: mushroom.blend
+# www.blender3d.org
+o Curve_Mesh
+v 0.004897 1.005368 -0.010674
+v 0.004897 0.900169 -0.350870
+v 0.004897 0.621869 -0.191393
+v 0.004897 0.453592 -0.153274
+v 0.004897 0.214000 -0.188148
+v 0.176254 0.214000 -0.099499
+v 0.242945 -0.009882 -0.138003
+v 0.146052 0.453592 -0.082062
+v 0.179064 0.621869 -0.101121
+v 0.302012 0.631809 -0.172105
+v 0.568075 0.548967 -0.325717
+v 0.536072 0.693228 -0.307240
+v 0.317175 0.900169 -0.180860
+v 0.022557 1.005368 -0.010762
+v 0.326081 0.900169 0.174586
+v 0.031462 1.005368 0.004488
+v 0.544977 0.693228 0.300966
+v 0.576980 0.548967 0.319443
+v 0.310917 0.631809 0.165831
+v 0.187969 0.621869 0.094847
+v 0.154958 0.453592 0.075788
+v 0.185159 0.214000 0.093225
+v 0.251851 -0.009882 0.131729
+v 0.022709 0.214000 0.197299
+v 0.022709 -0.009882 0.274308
+v 0.022709 0.453592 0.162425
+v 0.022709 0.621869 0.200544
+v 0.022709 0.631809 0.342512
+v 0.022709 0.548967 0.649735
+v 0.022709 0.693228 0.612781
+v 0.022709 0.900170 0.360021
+v 0.022709 1.005368 0.019825
+v -0.289569 0.900170 0.190011
+v 0.005049 1.005368 0.019913
+v -0.508466 0.693228 0.316391
+v -0.540469 0.548967 0.334868
+v -0.274406 0.631809 0.181256
+v -0.151458 0.621869 0.110272
+v -0.118446 0.453592 0.091213
+v -0.148648 0.214000 0.108650
+v -0.215339 -0.009882 0.147154
+v -0.157553 0.214000 -0.084074
+v -0.224245 -0.009882 -0.122578
+v -0.127352 0.453592 -0.066637
+v -0.160364 0.621869 -0.085696
+v -0.283311 0.631809 -0.156680
+v -0.549375 0.548967 -0.310292
+v -0.517371 0.693228 -0.291815
+v -0.298475 0.900170 -0.165435
+v -0.003857 1.005368 0.004663
+v 0.004897 0.693228 -0.603630
+v 0.004897 0.548967 -0.640584
+v 0.004897 0.631809 -0.333361
+v 0.004897 -0.009882 -0.265157
+vn -0.036378 0.325022 -0.944975
+vn -0.043550 0.234474 -0.971129
+vn 0.819239 0.234474 -0.523301
+vn 0.800165 0.325022 -0.504013
+vn -0.050447 -0.038514 -0.997955
+vn 0.839015 -0.038514 -0.542680
+vn -0.037172 -0.660176 -0.750175
+vn 0.631062 -0.660176 -0.407270
+vn 0.001862 -0.991821 0.127537
+vn -0.109500 -0.991821 0.065371
+vn -0.010163 -0.623676 -0.781579
+vn 0.671804 -0.623676 -0.399609
+vn -0.013459 0.517319 -0.855647
+vn 0.734275 0.517319 -0.439497
+vn -0.012970 0.864528 -0.502365
+vn 0.428571 0.864528 -0.262398
+vn -0.014191 0.955260 -0.295389
+vn 0.248695 0.955260 -0.159978
+vn 0.262917 0.955260 0.135380
+vn 0.441542 0.864528 0.239937
+vn 0.747765 0.517319 0.416150
+vn 0.681967 -0.623676 0.381970
+vn -0.111393 -0.991821 -0.062136
+vn 0.668233 -0.660176 0.342875
+vn 0.889492 -0.038514 0.455275
+vn 0.862789 0.234474 0.447829
+vn 0.836573 0.325022 0.440962
+vn 0.043550 0.234474 0.971129
+vn 0.036378 0.325022 0.944975
+vn 0.050447 -0.038514 0.997955
+vn 0.037172 -0.660176 0.750175
+vn -0.001862 -0.991821 -0.127537
+vn 0.010163 -0.623676 0.781579
+vn 0.013459 0.517319 0.855647
+vn 0.012970 0.864528 0.502365
+vn 0.014191 0.955260 0.295389
+vn -0.248695 0.955260 0.159978
+vn -0.428571 0.864528 0.262398
+vn -0.734275 0.517319 0.439497
+vn -0.671804 -0.623676 0.399609
+vn 0.109500 -0.991821 -0.065371
+vn -0.631062 -0.660176 0.407270
+vn -0.839015 -0.038514 0.542680
+vn -0.819239 0.234474 0.523301
+vn -0.800165 0.325022 0.504013
+vn -0.862789 0.234474 -0.447829
+vn -0.836573 0.325022 -0.440962
+vn -0.889492 -0.038514 -0.455275
+vn -0.668233 -0.660176 -0.342875
+vn 0.111393 -0.991821 0.062136
+vn -0.681967 -0.623676 -0.381970
+vn -0.747765 0.517319 -0.416150
+vn -0.441542 0.864528 -0.239937
+vn -0.262917 0.955260 -0.135380
+usemtl (null)
+usemtl (null)
+s 1
+f 54//1 5//2 6//3 7//4
+s 1
+f 5//2 4//5 8//6 6//3
+s 1
+f 4//5 3//7 9//8 8//6
+s 1
+f 3//7 53//9 10//10 9//8
+s 1
+f 53//9 52//11 11//12 10//10
+s 1
+f 52//11 51//13 12//14 11//12
+s 1
+f 51//13 2//15 13//16 12//14
+s 1
+f 2//15 1//17 14//18 13//16
+s 1
+f 13//16 14//18 16//19 15//20
+s 1
+f 12//14 13//16 15//20 17//21
+s 1
+f 11//12 12//14 17//21 18//22
+s 1
+f 10//10 11//12 18//22 19//23
+s 1
+f 9//8 10//10 19//23 20//24
+s 1
+f 8//6 9//8 20//24 21//25
+s 1
+f 6//3 8//6 21//25 22//26
+s 1
+f 7//4 6//3 22//26 23//27
+s 1
+f 23//27 22//26 24//28 25//29
+s 1
+f 22//26 21//25 26//30 24//28
+s 1
+f 21//25 20//24 27//31 26//30
+s 1
+f 20//24 19//23 28//32 27//31
+s 1
+f 19//23 18//22 29//33 28//32
+s 1
+f 18//22 17//21 30//34 29//33
+s 1
+f 17//21 15//20 31//35 30//34
+s 1
+f 15//20 16//19 32//36 31//35
+s 1
+f 31//35 32//36 34//37 33//38
+s 1
+f 30//34 31//35 33//38 35//39
+s 1
+f 29//33 30//34 35//39 36//40
+s 1
+f 28//32 29//33 36//40 37//41
+s 1
+f 27//31 28//32 37//41 38//42
+s 1
+f 26//30 27//31 38//42 39//43
+s 1
+f 24//28 26//30 39//43 40//44
+s 1
+f 25//29 24//28 40//44 41//45
+s 1
+f 41//45 40//44 42//46 43//47
+s 1
+f 40//44 39//43 44//48 42//46
+s 1
+f 39//43 38//42 45//49 44//48
+s 1
+f 38//42 37//41 46//50 45//49
+s 1
+f 37//41 36//40 47//51 46//50
+s 1
+f 36//40 35//39 48//52 47//51
+s 1
+f 35//39 33//38 49//53 48//52
+s 1
+f 33//38 34//37 50//54 49//53
+s 1
+f 1//17 2//15 49//53 50//54
+s 1
+f 48//52 49//53 2//15 51//13
+s 1
+f 47//51 48//52 51//13 52//11
+s 1
+f 46//50 47//51 52//11 53//9
+s 1
+f 45//49 46//50 53//9 3//7
+s 1
+f 44//48 45//49 3//7 4//5
+s 1
+f 42//46 44//48 4//5 5//2
+s 1
+f 43//47 42//46 5//2 54//1
