@@ -2,6 +2,8 @@ Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 
 0.15
 
+* more meshes to play with (used in frisbee examples)
+* shadows now work on immediate mode objects
 * key release fixed in drflux
 * better random functions with randomness.ss
 * frisbee: a functional reactive game engine using frtime
